# codesentry

./: Dockerfile  README.md  pyproject.toml
github/workflows/: ci.yml
src/codesentry/: __init__.py  analyzer.py  cli.py  models.py  report.py
src/codesentry/src/codesentry/: models.py
tests/: test_analyzer.py  test_cli.py
tests/tests/fixtures/: sample_bad.py  sample_clean.py
